<resources>
    <string name="app_name">Full_Time_Wannabe</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="hint_id">ID</string>
    <string name="hint_pw">PW</string>

    <string name="login_text">로그인</string>
    <string name="signin_text">회원가입</string>

    <string name="user_email">이메일</string>
    <string name="user_name">이름</string>
    <string name="user_pw">비밀번호</string>
    <string name="title_activity_chat">chat</string>

    <string name="hint_send_msg">메세지를 입력하세요</string>

</resources>
