<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F3F5"
    android:orientation="vertical"
    tools:context="pyneer.full_time_wannabe.activity.main.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/btn_base_normal"
                android:layout_marginTop="12dp"
                android:layout_height="48dp"
                android:elevation="1dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="24dp"
                    android:background="#00000000"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_id" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/btn_base_normal"
                android:layout_height="48dp"
                android:elevation="1dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="24dp"
                    android:background="#00000000"
                    android:hint="@string/hint_pw"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:background="@drawable/btn_base_teal"
                    android:text="@string/signin_text"
                    android:textColor="#fff"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:background="@drawable/btn_base_teal"
                    android:text="@string/login_text"
                    android:textColor="#fff"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>



    </RelativeLayout>

</LinearLayout>